2003-02-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Only call Scene::shutdown
          if Browser::scene is nonzero.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
          implementations to NavigationInfo, Viewpoint.

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Added do_shutdown
          implementation to Text.

2003-02-08  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Bound node stacks should
          not have owning pointers.

        * src/openvrml/OpenVRML/browser.cpp:  Fixed relative URI
          resolution bug where '?' and '#' separator characters were
          omitted.

2003-02-07  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/System.cpp,
          src/openvrml/OpenVRML/System.h,
          src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp:  Moved
          System::time functionality to Browser::getCurrentTime
          function.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml/OpenVRML/node.cpp, src/openvrml/OpenVRML/node.h,
          src/openvrml/OpenVRML/nodeptr.cpp,
          src/openvrml/OpenVRML/script.cpp,
          src/openvrml/OpenVRML/script.h,
          src/openvrml/OpenVRML/vrml97node.cpp:  Added shutdown member
          function to Node, Scene.

2003-01-27  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.doc: Update conformance test results.

2003-01-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.cpp,