@@ -402,6 +402,7 @@ namespace OpenVRML {
 
         private:
             virtual void do_initialize(double timestamp) throw (std::bad_alloc);
+            virtual void do_shutdown(double timestamp) throw ();
 
             //
             // eventIn handlers
@@ -1472,6 +1473,7 @@ namespace OpenVRML {
 
         private:
             virtual void do_initialize(double timestamp) throw (std::bad_alloc);
+            virtual void do_shutdown(double timestamp) throw ();
 
             //
             // eventIn handlers
@@ -1785,6 +1787,7 @@ namespace OpenVRML {
 
         private:
             virtual void do_initialize(double timestamp) throw (std::bad_alloc);
+            virtual void do_shutdown(double timestamp) throw ();
 
             //
             // eventIn handlers
@@ -2163,6 +2166,7 @@ namespace OpenVRML {
 
         private:
             virtual void do_initialize(double timestamp) throw (std::bad_alloc);
+            virtual void do_shutdown(double timestamp) throw ();
 
             //
             // eventIn handlers
@@ -2422,6 +2426,7 @@ namespace OpenVRML {
 
         private:
             virtual void do_initialize(double timestamp) throw (std::bad_alloc);
+            virtual void do_shutdown(double timestamp) throw ();
 
             //
             // eventIn handlers
